# vas3kampctf25

./: .gitignore  README.md
tasks/: README.md  WRITEUP.md  f.txt  spawner.pl  spawner@.service
tasks/include/: Dockerfile  flag  index.php
tasks/include/page/: blog2.html  index.html
tasks/robots/: index.html  robots.txt
tasks/robots/secret_31337/: flag_73313.html  index.html  robots.txt
tasks/shell1/: Dockerfile  flag  run_shell.sh
tasks/shell2/: Dockerfile  flag  run_shell.sh
tasks/sqli/: Dockerfile  index.html  login.db  login.php
telegram-bot/: Cargo.toml  README.md  config.json
telegram-bot/src/: api.rs  main.rs  sender.rs  text.rs
