[package]
name = "v3k-ctf-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1"
teloxide = {  version = "0.15.0", features = ["default"] }
tokio = { version = "1.45.0", features = ["full"] }
reqwest = { version = "0", features = ["json"]}
redis = { version = "0", features = ["tokio-comp", "aio"]}
uuid = { version = "1.16.0", features = ["v4"] }
